# SpanishPriceForecast

./: README.md  main_backtest.py  pyproject.toml
config/: model_config.yaml  preprocessing.yaml
data/prediction_long/: prediction_long.parquet
data/prediction_short/: prediction_short.parquet
data/raw/: energy_data.parquet
notebooks/: backtest_analysis.ipynb  eda_before_preprocess.ipynb
src/data/: fetcher.py  loader.py
src/models/: QuantileModel.py  hpo_tuner.py  model_builders.py
src/preprocessing/: pipeline.py  transformers.py  utils.py
src/utils/: plots.py
